# mirage-brandextract-mcp

./: .env.example  README.md  pyproject.toml  server.py
src/mirage/: __init__.py  tools.py
src/mirage/schemas/: __init__.py  brand.py
src/mirage/services/: __init__.py  firecrawl.py  gemini.py
tests/: __init__.py  conftest.py  test_services.py  test_tools.py
